Edits: #1 now horizontal scroll works as a slider #2 fixed animation of curtains in palette section

--- a/app/scss/_media.scss
+++ b/app/scss/_media.scss
@@ -209,6 +209,12 @@
         flex-direction: column;
         gap: 80px;
 
+        &__wrapper {
+            display: block;
+            width: auto;
+            height: auto;
+        }
+
         &__header {
             display: none;
         }
